--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.7.0"
+    "vite": "^2.7.0",
+    "vite-plugin-html": "^2.1.1"
   },
   "dependencies": {
     "aos": "^2.3.4",
